--- a/index.html
+++ b/index.html
@@ -28,23 +28,40 @@
     }
 
     body {
-      background-color: #28a745;
       font-family: 'Arial', sans-serif;
+      background-color: #28a745; /* Green background */
       color: white;
     }
 
     .header {
-      color: black; /* Set text color to black */
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       font-family: 'Archivo Black', sans-serif;
-      font-size: 4em; /* Larger font size */
+      font-size: 4em;
       font-weight: bold;
-      text-align: center;
       letter-spacing: 5px;
-      text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8); /* Blackish shadow effect */
+      background: linear-gradient(to right, #ffe600, #f0ad4e); /* Yellow texture effect */
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8); /* Black shadow */
+    }
+
+    .header .left, .header .center, .header .right {
+      flex: 1;
+      text-align: center;
+    }
+
+    .header .left {
+      text-align: left;
+    }
+
+    .header .right {
+      text-align: right;
     }
 
     .header span {
-      display: block; /* Makes each word appear on a new line */
+      display: block;
       line-height: 1.5;
     }
 
@@ -213,9 +230,9 @@
 <body>
 
   <div class="header">
-    <span>ALL</span>
-    <span>YONO</span>
-    <span>GAMES</span>
+    <div class="left"><span>ALL</span></div>
+    <div class="center"><span>YONO</span></div>
+    <div class="right"><span>GAMES</span></div>
   </div>
 
   <div class="notice-bar">
