--- a/index.html
+++ b/index.html
@@ -50,14 +50,19 @@
 
     .header .line1 {
       text-align: left;
+      display: inline-block;
+      padding-right: 10px;
     }
 
     .header .line2 {
       text-align: center;
+      display: inline-block;
     }
 
     .header .line3 {
       text-align: right;
+      display: inline-block;
+      padding-left: 10px;
     }
 
     .notice-bar {
