--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
     }
 
     .header .line1 {
-      margin-bottom: -20px;
+      margin-left: 0;
     }
 
     .header .line2 {
-      margin-bottom: 10px;
+      margin-left: 20px;  /* Two space gap from "ALL" */
     }
 
     .header .line3 {
-      margin-top: -10px;
+      margin-left: 40px;  /* Two space gap from "YONO" */
     }
 
     .notice-bar {
@@ -228,7 +228,7 @@
 <body>
 
   <div class="header">
-    <div style="display: flex; justify-content: space-between; width: 100%; text-align: center;">
+    <div style="display: flex; flex-direction: column; align-items: flex-start;">
       <span class="line1">ALL</span>
       <span class="line2">YONO</span>
       <span class="line3">GAMES</span>
