--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     }
 
     .header .line2 {
-      margin-left: 50px;  /* Five space gap from "ALL" */
+      margin-left: 100px;  /* Ten space gap from "ALL" */
     }
 
     .header .line3 {
-      margin-left: 100px;  /* Five space gap from "YONO" */
+      margin-left: 200px;  /* Ten space gap from "YONO" */
     }
 
     .notice-bar {
