--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     }
 
     .header .line2 {
-      margin-left: 140px;  /* 7 spaces gap from "ALL" */
+      margin-left: 100px;  /* Ten space gap from "ALL" */
     }
 
     .header .line3 {
-      margin-left: 240px;  /* 10 spaces gap from "YONO" */
+      margin-left: 200px;  /* Ten space gap from "YONO" */
     }
 
     .notice-bar {
@@ -275,16 +275,25 @@
       </div>
       <a class="download" href="https://bingo91.vip?code=XU7QX913NFS&t=1745499112">Download</a>
     </div>
+
+    <div class="app">
+      <img src="yono_arcade.jpg" alt="YONO ARCADE">
+      <div class="app-info">
+        <strong>YONO ARCADE</strong>
+        10M+ | Bonus ₹40
+      </div>
+      <a class="download" href="https://yonoofficial.com?code=F559HGJK4UB&t=1745499305">Download</a>
+    </div>
   </div>
 
   <div class="gallery">
-    <img src="image1.jpg" alt="Image 1">
-    <img src="image2.jpg" alt="Image 2">
-    <img src="image3.jpg" alt="Image 3">
+    <img src="gallery1.jpg" alt="Gallery 1">
+    <img src="gallery2.jpg" alt="Gallery 2">
+    <img src="gallery3.jpg" alt="Gallery 3">
   </div>
 
   <div class="disclaimer-bar">
-    <span>Disclaimer: Play responsibly at your own risk. All earnings are subject to game rules and conditions.</span>
+    <span>Play responsibly at your own risk. All earnings are subject to game rules and conditions.</span>
   </div>
 
 </body>
