--- a/index.html
+++ b/index.html
@@ -63,6 +63,38 @@
       margin-left: 200px;  /* Ten space gap from "YONO" */
     }
 
+    .header .line1, .header .line2, .header .line3 {
+      position: relative;
+    }
+
+    /* Stylish Underline */
+    .header .line1::after,
+    .header .line2::after,
+    .header .line3::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: -5px;
+      height: 3px;
+      background: black;
+    }
+
+    .header .line1::after {
+      width: 80%; /* Adjust width for 'ALL' */
+      margin-left: 10%;
+    }
+
+    .header .line2::after {
+      width: 70%; /* Adjust width for 'YONO' */
+      margin-left: 15%;
+    }
+
+    .header .line3::after {
+      width: 60%; /* Adjust width for 'GAMES' */
+      margin-left: 20%;
+    }
+
     .notice-bar {
       background-color: black;
       overflow: hidden;
@@ -74,10 +106,10 @@
       padding: 10px 0;
       font-size: 1.1em;
       color: #ffe600;
-      font-weight: bold;
+      font-family: 'Luckiest Guy', cursive;
       text-align: center;
       animation: scrollRightToLeft 20s linear infinite;
-      font-family: 'Luckiest Guy', cursive;
+      font-weight: normal; /* Made unbold */
     }
 
     .app-container {
