--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Melting+Candles&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Helwa&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
     * {
@@ -35,7 +37,7 @@
     }
 
     .header {
-      font-family: 'Archivo Black', sans-serif;
+      font-family: 'Melting Candles', cursive;
       font-size: 4em;
       font-weight: bold;
       text-align: center;
@@ -74,7 +76,7 @@
       background-color: black;
       overflow: hidden;
       white-space: nowrap;
-      font-family: 'Open Sans', sans-serif;
+      font-family: 'Helwa', cursive;
     }
 
     .notice-bar span {
@@ -85,7 +87,6 @@
       font-weight: normal; /* Changed to normal weight */
       text-align: center;
       animation: scrollRightToLeft 20s linear infinite;
-      font-family: 'Luckiest Guy', cursive;
     }
 
     .app-container {
