--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Melting+Candles&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Helwa&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
     * {
       margin: 0;
@@ -37,7 +35,7 @@
     }
 
     .header {
-      font-family: 'Melting Candles', cursive;
+      font-family: 'Archivo Black', sans-serif;
       font-size: 4em;
       font-weight: bold;
       text-align: center;
@@ -66,17 +64,11 @@
       margin-left: 200px;  /* Ten space gap from "YONO" */
     }
 
-    .header .line1, .header .line2, .header .line3 {
-      border-bottom: 3px solid yellow;
-      padding-bottom: 5px;
-      font-weight: bold;
-    }
-
     .notice-bar {
       background-color: black;
       overflow: hidden;
       white-space: nowrap;
-      font-family: 'Helwa', cursive;
+      font-family: 'Helwa', cursive;  /* Helwa font applied */
     }
 
     .notice-bar span {
@@ -84,7 +76,7 @@
       padding: 10px 0;
       font-size: 1.1em;
       color: #ffe600;
-      font-weight: normal; /* Changed to normal weight */
+      font-weight: normal;
       text-align: center;
       animation: scrollRightToLeft 20s linear infinite;
     }
