--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Helwa&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap');
 
     * {
       margin: 0;
@@ -64,11 +64,22 @@
       margin-left: 200px;  /* Ten space gap from "YONO" */
     }
 
+    /* Glowing Black Underline Below Title */
+    .header::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 4px;
+      background: #000;
+      box-shadow: 0 0 10px #000, 0 0 20px #000, 0 0 30px #000;
+      margin-top: 10px;
+    }
+
     .notice-bar {
       background-color: black;
       overflow: hidden;
       white-space: nowrap;
-      font-family: 'Helwa', cursive;  /* Helwa font applied */
+      font-family: 'Coral Pixels', cursive;  /* Coral Pixels font applied */
     }
 
     .notice-bar span {
