--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <title>ALL YONO GAMES</title>
 
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Final+Draft&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Chonky+Bunny&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap');
@@ -35,7 +37,7 @@
     }
 
     .header {
-      font-family: 'Archivo Black', sans-serif;
+      font-family: 'Final Draft', cursive;
       font-size: 4em;
       font-weight: bold;
       text-align: center;
@@ -50,36 +52,27 @@
       color: #ffe600; /* Yellow */
       text-shadow: 2px 2px 5px black, 0 0 25px yellow, 0 0 5px darkgoldenrod;
       margin: 0;
+      position: relative;
     }
 
-    .header .line1 {
-      margin-left: 30px;
-    }
-
-    .header .line2 {
-      margin-left: 100px;  /* Ten space gap from "ALL" */
-    }
-
-    .header .line3 {
-      margin-left: 200px;  /* Ten space gap from "YONO" */
-    }
-
-    /* Glowing Black Underline Below Title */
-    .header::after {
+    /* Underline under each word */
+    .header .line1::after, .header .line2::after, .header .line3::after {
       content: '';
-      display: block;
+      position: absolute;
       width: 100%;
-      height: 4px;
+      height: 5px;
       background: #000;
       box-shadow: 0 0 10px #000, 0 0 20px #000, 0 0 30px #000;
-      margin-top: 10px;
+      top: 100%;
+      left: 0;
+      margin-top: 5px;
     }
 
     .notice-bar {
       background-color: black;
       overflow: hidden;
       white-space: nowrap;
-      font-family: 'Coral Pixels', cursive;  /* Coral Pixels font applied */
+      font-family: 'Chonky Bunny', cursive;  /* Chonky Bunny font applied */
     }
 
     .notice-bar span {
