--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <title>ALL YONO GAMES</title>
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Final+Draft&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Chonky+Bunny&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Final+Draft&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap');
@@ -55,14 +55,13 @@
       position: relative;
     }
 
-    /* Underline under each word */
+    /* Underline below title */
     .header .line1::after, .header .line2::after, .header .line3::after {
       content: '';
       position: absolute;
       width: 100%;
       height: 5px;
-      background: #000;
-      box-shadow: 0 0 10px #000, 0 0 20px #000, 0 0 30px #000;
+      background: #ffe600;
       top: 100%;
       left: 0;
       margin-top: 5px;
