--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
   <title>ALL YONO GAMES</title>
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Chonky+Bunny&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Final+Draft&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap');
 
     * {
       margin: 0;
@@ -37,7 +34,7 @@
     }
 
     .header {
-      font-family: 'Final Draft', cursive;
+      font-family: 'Archivo Black', sans-serif;
       font-size: 4em;
       font-weight: bold;
       text-align: center;
@@ -52,26 +49,24 @@
       color: #ffe600; /* Yellow */
       text-shadow: 2px 2px 5px black, 0 0 25px yellow, 0 0 5px darkgoldenrod;
       margin: 0;
-      position: relative;
     }
 
-    /* Underline below title */
-    .header .line1::after, .header .line2::after, .header .line3::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 5px;
-      background: #ffe600;
-      top: 100%;
-      left: 0;
-      margin-top: 5px;
+    .header .line1 {
+      margin-left: 30px;
+    }
+
+    .header .line2 {
+      margin-left: 100px;  /* Ten space gap from "ALL" */
+    }
+
+    .header .line3 {
+      margin-left: 200px;  /* Ten space gap from "YONO" */
     }
 
     .notice-bar {
       background-color: black;
       overflow: hidden;
       white-space: nowrap;
-      font-family: 'Chonky Bunny', cursive;  /* Chonky Bunny font applied */
     }
 
     .notice-bar span {
@@ -79,9 +74,10 @@
       padding: 10px 0;
       font-size: 1.1em;
       color: #ffe600;
-      font-weight: normal;
+      font-weight: bold;
       text-align: center;
       animation: scrollRightToLeft 20s linear infinite;
+      font-family: 'Luckiest Guy', cursive;
     }
 
     .app-container {
