--- a/index.html
+++ b/index.html
@@ -3,28 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="YONO GAMES - Explore top games, earn instant bonuses, and download now! Join and get up to ₹40 on registration." />
-  <meta name="keywords" content="YONO GAMES, game downloads, earn bonus, download games, Spin Crush, YONO RUMMY, Jaiho Spin, IND Bingo, YONO ARCADE" />
+  <meta name="description" content="YONO GAMES offers the best gaming apps with amazing bonuses. Download your favorite games and earn rewards today!" />
+  <meta name="keywords" content="YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming" />
   <meta name="author" content="YONO GAMES" />
-
-  <!-- Social Media Meta Tags -->
-  <meta property="og:title" content="YONO GAMES - Best Games to Download" />
-  <meta property="og:description" content="Join YONO GAMES, explore top games, earn bonuses, and download the latest games!" />
-  <meta property="og:image" content="your-image-url.jpg" />
-  <meta property="og:url" content="your-website-url.com" />
-  <meta name="twitter:title" content="YONO GAMES - Best Games to Download" />
-  <meta name="twitter:description" content="Join YONO GAMES, explore top games, earn bonuses, and download the latest games!" />
-  <meta name="twitter:image" content="your-image-url.jpg" />
+  <meta property="og:title" content="YONO GAMES" />
+  <meta property="og:description" content="Join YONO GAMES now to get the best gaming apps with incredible bonuses! Download now and start playing!" />
+  <meta property="og:image" content="path-to-your-image.jpg" />
+  <meta property="og:url" content="https://your-website-url.com" />
   <meta name="twitter:card" content="summary_large_image" />
-  
-  <title>YONO GAMES</title>
+  <meta name="twitter:title" content="YONO GAMES" />
+  <meta name="twitter:description" content="Join YONO GAMES now to get the best gaming apps with incredible bonuses! Download now and start playing!" />
+  <meta name="twitter:image" content="path-to-your-image.jpg" />
+
+  <title>ALL YONO GAMES</title>
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-    
+
     * {
       margin: 0;
       padding: 0;
@@ -35,28 +31,53 @@
       background-color: #28a745;
       font-family: 'Arial', sans-serif;
       color: white;
-      padding: 0;
-      margin: 0;
     }
 
     .header {
-      font-family: 'Bungee Shade', cursive;
-      font-size: 2.8em;
+      font-family: 'Archivo Black', sans-serif;
+      font-size: 4em;
+      font-weight: bold;
       text-align: center;
-      padding: 25px 10px 15px;
-      background: linear-gradient(to right, gold, orange);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      padding: 20px 10px;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
-    .notice {
-      text-align: center;
-      font-family: 'Luckiest Guy', cursive;
+    .header .line1, .header .line2, .header .line3 {
+      color: #ffe600; /* Yellow */
+      text-shadow: 2px 2px 5px black, 0 0 25px yellow, 0 0 5px darkgoldenrod;
+      margin: 0;
+    }
+
+    .header .line1 {
+      margin-left: 30px;
+    }
+
+    .header .line2 {
+      margin-left: 100px;  /* Ten space gap from "ALL" */
+    }
+
+    .header .line3 {
+      margin-left: 200px;  /* Ten space gap from "YONO" */
+    }
+
+    .notice-bar {
+      background-color: black;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+
+    .notice-bar span {
+      display: inline-block;
+      padding: 10px 0;
       font-size: 1.1em;
-      margin: 10px;
-      color: #fff700;
-      text-shadow: 1px 1px 2px #000;
+      color: #ffe600;
       font-weight: bold;
+      text-align: center;
+      animation: scrollRightToLeft 20s linear infinite;
+      font-family: 'Luckiest Guy', cursive;
     }
 
     .app-container {
@@ -67,13 +88,15 @@
     }
 
     .app {
-      background-color: #006400;
+      background-color: #004d00;
       border-radius: 15px;
-      padding: 12px;
+      padding: 10px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+      border: 2px solid #ffe600;
+      flex-wrap: wrap;
     }
 
     .app img {
@@ -81,40 +104,32 @@
       height: 50px;
       object-fit: cover;
       border-radius: 12px;
+      border: 2px solid #fff;
     }
 
     .app-info {
       flex: 1;
-      padding: 0 12px;
+      padding: 0 10px;
+      font-size: 0.9em;
+      min-width: 120px;
     }
 
     .app-info strong {
-      font-size: 1.1em;
-      font-weight: bold;
-      text-transform: uppercase;
-      display: inline-block;
-      position: relative;
-    }
-
-    .app-info strong:after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      width: 100%;
-      height: 3px;
-      background-color: black;
-      box-shadow: 0 0 10px 0px black;
+      font-size: 1em;
+      display: block;
+      color: #ffe600;
     }
 
     .download {
       background-color: #ffdd57;
       color: black;
-      padding: 10px 14px;
+      padding: 8px 12px;
       text-decoration: none;
       border-radius: 10px;
       font-weight: bold;
+      font-size: 0.85em;
       transition: 0.3s ease;
+      margin-top: 5px;
     }
 
     .download:hover {
@@ -123,68 +138,112 @@
     }
 
     .gallery {
-      overflow: hidden;
-      width: 100%;
-      height: 300px;
-      margin-top: 25px;
-      border-radius: 12px;
-    }
-
-    .gallery-inner {
-      display: flex;
-      width: 300%;
-      animation: slideGallery 15s infinite linear;
-    }
-
-    .gallery-inner img {
-      width: 100vw;
-      height: 300px;
-      object-fit: cover;
-      filter: blur(5px);
-      transition: filter 1s ease-out;
-    }
-
-    .gallery-inner img:nth-child(1):hover {
-      filter: blur(0);
-    }
-
-    .gallery-inner img:nth-child(2):hover {
-      filter: blur(0);
-    }
-
-    .gallery-inner img:nth-child(3):hover {
-      filter: blur(0);
-    }
-
-    @keyframes slideGallery {
-      0% { transform: translateX(0); }
-      33% { transform: translateX(-100vw); }
-      66% { transform: translateX(-200vw); }
-      100% { transform: translateX(0); }
-    }
-
-    .footer-description {
-      text-align: center;
       margin-top: 30px;
-      font-family: 'Luckiest Guy', cursive;
-      font-size: 1.1em;
-      color: #fff700;
-      font-weight: bold;
-      text-shadow: 1px 1px 2px #000;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      gap: 10px;
+      flex-wrap: wrap;
+      padding: 10px;
     }
 
+    .gallery img {
+      width: 30%;
+      max-width: 120px;
+      height: auto;
+      border-radius: 10px;
+      filter: blur(5px);
+      transition: filter 1s ease-in-out;
+    }
+
+    .gallery img.unblur {
+      filter: blur(0);
+    }
+
+    .disclaimer-bar {
+      background-color: black;
+      overflow: hidden;
+      white-space: nowrap;
+      margin-top: 20px;
+    }
+
+    .disclaimer-bar span {
+      display: inline-block;
+      padding: 10px 0;
+      font-size: 0.85em;
+      color: #ffe600;
+      font-weight: bold;
+      animation: scrollRightToLeft 18s linear infinite;
+    }
+
+    @keyframes scrollRightToLeft {
+      0% {
+        transform: translateX(100%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
+    @keyframes unblurCycle {
+      0%, 30% { filter: blur(0); }
+      33%, 100% { filter: blur(5px); }
+    }
+
+    .gallery img:nth-child(1) {
+      animation: unblurCycle 9s infinite;
+      animation-delay: 0s;
+    }
+
+    .gallery img:nth-child(2) {
+      animation: unblurCycle 9s infinite;
+      animation-delay: 3s;
+    }
+
+    .gallery img:nth-child(3) {
+      animation: unblurCycle 9s infinite;
+      animation-delay: 6s;
+    }
+
+    @media (max-width: 500px) {
+      .header {
+        font-size: 2em;
+      }
+
+      .gallery img {
+        width: 30%;
+      }
+
+      .app-info {
+        font-size: 0.8em;
+      }
+
+      .download {
+        font-size: 0.75em;
+        padding: 6px 10px;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <div class="header">ALL YONO GAMES</div>
-  <div class="notice">Join now and get instant bonus up to ₹40 on registration!</div>
+  <div class="header">
+    <div style="display: flex; flex-direction: column; align-items: flex-start;">
+      <span class="line1">ALL</span>
+      <span class="line2">YONO</span>
+      <span class="line3">GAMES</span>
+    </div>
+  </div>
+
+  <div class="notice-bar">
+    <span>Join now and get instant bonus up to ₹40 on registration!</span>
+  </div>
 
   <div class="app-container">
     <div class="app">
       <img src="spin_crush.jpg" alt="Spin Crush">
       <div class="app-info">
-        <strong>SPIN CRUSH</strong><br>
+        <strong>SPIN CRUSH</strong>
         10M+ | Bonus ₹40
       </div>
       <a class="download" href="https://2shisgjsqawwhsagui7c.Safelyearnmillionsbysharingonepersonaqfxzqyfw.com?code=ADE7X99JX92&t=1745498414">Download</a>
@@ -193,7 +252,7 @@
     <div class="app">
       <img src="yono_rummy.jpg" alt="YONO RUMMY">
       <div class="app-info">
-        <strong>YONO RUMMY</strong><br>
+        <strong>YONO RUMMY</strong>
         10M+ | Bonus ₹30
       </div>
       <a class="download" href="https://yonorummyg.com?code=TQJPFHAM2TH&t=1745498673">Download</a>
@@ -202,7 +261,7 @@
     <div class="app">
       <img src="jaiho_spin.jpg" alt="JAIHO SPIN">
       <div class="app-info">
-        <strong>JAIHO SPIN</strong><br>
+        <strong>JAIHO SPIN</strong>
         10M+ | Bonus ₹25
       </div>
       <a class="download" href="https://jaihospin4.com?code=7TA8XTHY3MN&t=1745498776">Download</a>
@@ -211,7 +270,7 @@
     <div class="app">
       <img src="ind_bingo.jpg" alt="IND BINGO">
       <div class="app-info">
-        <strong>IND BINGO</strong><br>
+        <strong>IND BINGO</strong>
         10M+ | Bonus ₹30
       </div>
       <a class="download" href="https://bingo91.vip?code=XU7QX913NFS&t=1745499112">Download</a>
@@ -220,7 +279,7 @@
     <div class="app">
       <img src="yono_arcade.jpg" alt="YONO ARCADE">
       <div class="app-info">
-        <strong>YONO ARCADE</strong><br>
+        <strong>YONO ARCADE</strong>
         10M+ | Bonus ₹40
       </div>
       <a class="download" href="https://yonoofficial.com?code=F559HGJK4UB&t=1745499305">Download</a>
@@ -228,15 +287,13 @@
   </div>
 
   <div class="gallery">
-    <div class="gallery-inner">
-      <img src="gallery1.jpg" alt="">
-      <img src="gallery2.jpg" alt="">
-      <img src="gallery3.jpg" alt="">
-    </div>
+    <img src="gallery1.jpg" alt="Gallery 1">
+    <img src="gallery2.jpg" alt="Gallery 2">
+    <img src="gallery3.jpg" alt="Gallery 3">
   </div>
 
-  <div class="footer-description">
-    Play responsibly at your own risk. All earnings are subject to game rules and conditions.
+  <div class="disclaimer-bar">
+    <span>Play responsibly at your own risk. All earnings are subject to game rules and conditions.</span>
   </div>
 
 </body>
