--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:title" content="YONO GAMES" />
   <meta name="twitter:description" content="Join YONO GAMES now to get the best gaming apps with incredible bonuses! Download now and start playing!" />
   <meta name="twitter:image" content="path-to-your-image.jpg" />
-
+  <meta name="google-site-verification" content="8CFzj7amSJWmo7k4BpOtdzgwaiTqHZ-OdUzqOUVOXDs" />
   <title>ALL YONO GAMES</title>
 
   <style>
