--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     .notice-bar span {
       display: inline-block;
       padding: 10px 0;
-      font-size: 0.90em;
+      font-size: 1.1em;
       color: #ffe600;
       font-weight: bold;
-      animation: scrollRightToLeft 18s linear infinite;
-      
+      animation: scrollRightToLeft 20s linear infinite;
+      font-family: 'Luckiest Guy', cursive;
     }
 
     .menu-bar {
@@ -146,17 +146,17 @@
     .download {
       background-color: #ffdd57;
       color: black;
-      padding: 8px 12px;
+      padding: 12px 18px; /* Increased padding */
       text-decoration: none;
-      border-radius: 10px;
+      border-radius: 12px; /* Slightly larger radius for a bigger button */
       font-weight: bold;
-      font-size: 0.85em;
+      font-size: 1em; /* Increased font size */
       transition: 0.3s ease;
     }
 
     .download:hover {
       background-color: #ffd000;
-      transform: scale(1.05);
+      transform: scale(1.1); /* Slightly increase the hover effect */
     }
 
     .gallery {
