--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
     .notice-bar span {
       display: inline-block;
       padding: 10px 0;
-      font-size: 1.1em;
+      font-size: 0.90em;
       color: #ffe600;
       font-weight: bold;
-      animation: scrollRightToLeft 20s linear infinite;
-      font-family: 'Luckiest Guy', cursive;
+      animation: scrollRightToLeft 18s linear infinite;
     }
 
     .menu-bar {
@@ -146,17 +145,17 @@
     .download {
       background-color: #ffdd57;
       color: black;
-      padding: 12px 18px; /* Increased padding */
+      padding: 16px 24px; /* Increased padding */
       text-decoration: none;
-      border-radius: 12px; /* Slightly larger radius for a bigger button */
+      border-radius: 12px; /* Slightly more rounded */
       font-weight: bold;
-      font-size: 1em; /* Increased font size */
+      font-size: 1.2em; /* Increased font size */
       transition: 0.3s ease;
     }
 
     .download:hover {
       background-color: #ffd000;
-      transform: scale(1.1); /* Slightly increase the hover effect */
+      transform: scale(1.2); /* Increased scale for hover effect */
     }
 
     .gallery {
@@ -223,7 +222,7 @@
       .header { font-size: 2em; }
       .gallery img { width: 30%; }
       .app-info { font-size: 0.8em; }
-      .download { font-size: 0.75em; padding: 6px 10px; }
+      .download { font-size: 0.85em; padding: 8px 12px; }
     }
   </style>
 </head>
