--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     .header .line3 { margin-left: 200px; }
 
     .notice-bar {
-      background-color: black;
+      background-color: #006400; /* Dark Green */
       overflow: hidden;
       white-space: nowrap;
     }
@@ -70,7 +70,7 @@
     }
 
     .menu-bar {
-      background: linear-gradient(135deg, #004d00, black);
+      background-color: black; /* Black background for menu bar */
       display: flex;
       justify-content: center;
       padding: 10px;
