--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="twitter:description" content="Join YONO GAMES now to get the best gaming apps with incredible bonuses! Download now and start playing!" />
   <meta name="twitter:image" content="path-to-your-image.jpg" />
   <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
-  <title>ALL YONO GAMES</title>
+  <title>All Yono Games - Download now and get bonus upto 500₹</title>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
