--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="author" content="YONO GAMES" />
   <meta property="og:title" content="YONO GAMES" />
   <meta property="og:description" content="Join YONO GAMES now to get the best gaming apps with incredible bonuses! Download now and start playing!" />
-  <meta property="og:image" content="path-to-your-image.jpg" />
+  <meta property="og:image" content="og.jpg" />
   <meta property="og:url" content="https://your-website-url.com" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="YONO GAMES" />
   <meta name="twitter:description" content="Join YONO GAMES now to get the best gaming apps with incredible bonuses! Download now and start playing!" />
-  <meta name="twitter:image" content="path-to-your-image.jpg" />
+  <meta name="twitter:image" content="og.jpg" />
   <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
-  <title>All Yono Games - Download now and get bonus upto 500₹</title>
+  <title>All Yono Game - download now and get bonus upto 500₹</title>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
@@ -23,12 +23,10 @@
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { background-color: #28a745; font-family: 'Arial', sans-serif; color: white; }
-    .header { font-family: 'Archivo Black', sans-serif; font-size: 4em; font-weight: bold; text-align: center; padding: 20px 10px; color: white; display: flex; flex-direction: column; align-items: center; }
-    .header .line1, .header .line2, .header .line3 { color: #ffe600; text-shadow: 2px 2px 5px black, 0 0 25px yellow, 0 0 5px darkgoldenrod; margin: 0; }
-    .header .line1 { margin-left: 30px; }
-    .header .line2 { margin-left: 100px; }
-    .header .line3 { margin-left: 200px; }
-
+    .header { font-family: 'Archivo Black', sans-serif; font-size: 2.5em; font-weight: bold; text-align: center; padding: 20px 10px; color: white; display: flex; flex-direction: column; align-items: center; }
+    .header img { width: 120px; height: auto; margin-bottom: 10px; border-radius: 10px; }
+    .header-text { color: #ffe600; text-shadow: 2px 2px 5px black, 0 0 25px yellow, 0 0 5px darkgoldenrod; }
+    
     .notice-bar { background-color: #006400; overflow: hidden; white-space: nowrap; }
     .notice-bar span { display: inline-block; padding: 10px 0; font-size: 0.90em; color: #ffe600; font-weight: bold; animation: scrollRightToLeft 18s linear infinite; }
 
@@ -72,11 +70,8 @@
 <body>
 
   <div class="header">
-    <div style="display: flex; flex-direction: column; align-items: flex-start;">
-      <span class="line1">ALL</span>
-      <span class="line2">YONO</span>
-      <span class="line3">GAMES</span>
-    </div>
+    <img src="og.jpg" alt="Yono Games">
+    <div class="header-text">All Yono Game - download now and get bonus upto 500₹</div>
   </div>
 
   <div class="notice-bar">
@@ -126,7 +121,6 @@
         <div class="app-info"><strong>TEEN PATTI MASTER</strong>10M+ | Bonus ₹40</div>
         <a class="download" href="https://www.earntp.com/m/l34ii">Download</a>
       </div>
-
     </div>
 
     <div class="gallery">
