--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="YONO GAMES offers the best gaming apps with amazing bonuses. Download your favorite games and earn rewards today!" />
-  <meta name="keywords" content="YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming" />
+  
+  <!-- SEO Meta Tags -->
+  <title>All Yono Games - Download Now and Get Bonus Upto ₹500</title>
+  <meta name="description" content="Download All Yono Games now and grab your bonus upto ₹500 instantly. Play your favorite games and earn real rewards easily!" />
+  <meta name="keywords" content="YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money" />
   <meta name="author" content="YONO GAMES" />
-  <meta property="og:title" content="YONO GAMES" />
-  <meta property="og:description" content="Join YONO GAMES now to get the best gaming apps with incredible bonuses! Download now and start playing!" />
-  <meta property="og:image" content="path-to-your-image.jpg" />
+  
+  <!-- Open Graph Meta Tags for Social Sharing -->
+  <meta property="og:title" content="All Yono Games - Download Now and Get Bonus Upto ₹500" />
+  <meta property="og:description" content="Download All Yono Games now and grab your bonus upto ₹500 instantly. Play your favorite games and earn real rewards easily!" />
+  <meta property="og:image" content="og.jpg" />
   <meta property="og:url" content="https://your-website-url.com" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="YONO GAMES" />
-  <meta name="twitter:description" content="Join YONO GAMES now to get the best gaming apps with incredible bonuses! Download now and start playing!" />
-  <meta name="twitter:image" content="path-to-your-image.jpg" />
-  <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
-  <title>ALL YONO GAMES</title>
+  <meta name="twitter:title" content="All Yono Games - Download Now and Get Bonus Upto ₹500" />
+  <meta name="twitter:description" content="Download All Yono Games now and grab your bonus upto ₹500 instantly. Play your favorite games and earn real rewards easily!" />
+  <meta name="twitter:image" content="og.jpg" />
 
+  <!-- Google Site Verification (if needed) -->
+  <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
+
+  <!-- CSS Styling (same as before, no changes) -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
