--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="All Yono Games - Download Now and Get Bonus Upto ₹500" />
   <meta property="og:description" content="Download All Yono Games now and grab your bonus upto ₹500 instantly. Play your favorite games and earn real rewards easily!" />
 <meta property="og:image" content="https://www.yonogamez.com/og.jpg" />
-  <meta property="og:url" content="https://your-website-url.com" />
+  <meta property="og:url" content="https://www.yonogamez.com/" />
   <meta property="og:type" content="website" />
   
   <!-- Twitter Card Meta Tags -->
