--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
 
   <!-- Google Site Verification (if needed) -->
   <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "All Yono Games",
+  "url": "https://www.yonogamez.com/",
+  "description": "Download All Yono Games and get bonus up to ₹500 instantly!",
+  "image": "https://www.yonogamez.com/og.jpg"
+}
+</script>
   <!-- CSS Styling (same as before, no changes) -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
