--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
   "image": "https://www.yonogamez.com/og.jpg"
 }
 </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XPD40844Z7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XPD40844Z7');
+</script>
   <!-- CSS Styling (same as before, no changes) -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
