--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   "image": "https://www.yonogamez.com/og.jpg"
 }
 </script>
-  <!-- Google tag (gtag.js) -->
-
+  <!-- CSS Styling (same as before, no changes) -->
+  <style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
